feat: apply orElseThrow with ResourceNotFoundException across all services